--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Publications</a></li>
-							<li><a href="#two">Work</a></li>
+							<li><a href="#two">Works</a></li>
+							<li><a href=" ">CV</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
@@ -37,10 +38,11 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi, I'm Weiyue.</h1>
-							<p>It is so nice to meet you in such a big world. <br />
+							<div class="welcome-words">
+							<p>A second year graduate student at Pecking University. Prior to this, I completed my Bachelor’s in Xiamen University. My research interests include Human-Computer Interaction, Accessibility, and Digital Art. <br />
 							<!--  <a href="http://html5up.net/license">Creative Commons</a>.-->
 							</p>
-							
+							</div>
 							<!-- <p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
 							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p> -->
 							<ul class="actions">
