--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 				<!-- Two1 -->
 					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
-							<h2>Work</h2>
-							<p>Some of my digital artwork, including interactive installations, digital games, and short videos. Detail pages are coming soon!</p>
+							<h2>Works</h2>
+							<p>Some of my digital artworks, including interactive installations, digital games, and short videos. Detail pages are coming soon!</p>
 							
 						</div>
 						<section>
