--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Publications</a></li>
 							<li><a href="#two">Works</a></li>
-							<li><a href=" ">CV</a></li>
 							<li><a href="#three">Contact</a></li>
+							<li><a href=" ">CV</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<h1>Hi, I'm Weiyue.</h1>
 							<div class="welcome-words">
-							<p>A second year graduate student at Pecking University. Prior to this, I completed my Bachelor’s in Xiamen University. My research interests include Human-Computer Interaction, Accessibility, and Digital Art. <br />
+							<p>I'm a second year graduate student at Pecking University. Prior to this, I completed my Bachelor’s in Xiamen University. My research interests include Human-Computer Interaction, Accessibility, and Digital Art. <br />
 							<!--  <a href="http://html5up.net/license">Creative Commons</a>.-->
 							</p>
 							</div>
