--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<h1>Hi, I'm Weiyue.</h1>
 							<div class="welcome-words">
-							<p>I'm a second year graduate student at Pecking University. Prior to this, I completed my Bachelor’s in Xiamen University. My research interests include Human-Computer Interaction, Accessibility, and Digital Art. <br />
+							<p>I'm a second year graduate student at Pecking University. Prior to this, I completed my Bachelor’s in Xiamen University. My research interests include Human-Computer Interaction, Accessibility, and digital art. <br />
 							<!--  <a href="http://html5up.net/license">Creative Commons</a>.-->
 							</p>
 							</div>
@@ -171,7 +171,7 @@
 					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
 							<h2>Works</h2>
-							<p>Some of my digital artworks, including interactive installations, digital games, and short videos. Detail pages are coming soon!</p>
+							<p>Detail pages are coming soon!</p>
 							
 						</div>
 						<section>
