--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/evergreen/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Evergreen</h3>
@@ -254,8 +254,8 @@
 							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Trapped Chivalrous</h3>
-									<p>A Tabula game on revolving scenic lantern.</p>
+									<h3>Komorebi</h3>
+									<p>An online game about rescuing wild migratory birds.</p>
 									<ul class="actions">
 <!-- 										<li><a href="generic.html" class="button">Learn more</a></li>
  -->									</ul>
