--- a/index.html
+++ b/index.html
@@ -174,25 +174,13 @@
 							<p>Detail pages are coming soon!</p>
 							
 						</div>
+						
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/Snuggle/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Timmy's Dream</h3>
-									<p>An action RPG game.</p>
-									<ul class="actions">
-									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
-									</ul>
-								</div>
-							</div>
-						</section>
-
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h3>Remmember Me</h3>
-									<p>Context-based Water-mediated Interaction Design</p>
+									<h3>Snuggle</h3>
+									<p>Natural Healing Interactive space at Suzhou High School.</p>
 									<ul class="actions">
 									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -205,7 +193,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Landscape Rippling</h3>
-									<p>Context-based Water-mediated Interaction Design</p>
+									<p>A water-mediated interaction system that allows you to interact with ancient paintings.</p>
 									<ul class="actions">
 									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -264,11 +252,11 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
+							<a href="#" class="image"><img src="images/Indigo/1.png" alt="" data-position="70% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Trapped Chivalrous</h3>
-									<p>A Tabula game on revolving scenic lantern.</p>
+									<h3>Indigo</h3>
+									<p>A micro documentary film about plant dyeing.</p>
 									<ul class="actions">
 								<!-- 		<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
