--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 							<a href="#" class="image"><img src="images/Snuggle/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Snuggle</h3>
-									<p>Natural Healing Interactive space at Suzhou High School.</p>
+									<h3>Embrace</h3>
+									<p>Natural Healing Interactive space at Suzhou High School</p>
 									<ul class="actions">
 									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -193,7 +193,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Landscape Rippling</h3>
-									<p>A water-mediated interaction system that allows you to interact with ancient paintings.</p>
+									<p>A water-mediated interaction system that allows you to interact with ancient paintings</p>
 									<ul class="actions">
 									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -206,7 +206,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Evergreen</h3>
-									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
+									<p>A somatosensory interactive space which allows you to experience plant dyeing</p>
 									<ul class="actions">
 									<!-- 	<li><a href="Komorebi.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -218,7 +218,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Trapped Chivalrous</h3>
-									<p>A Tabula game on revolving scenic lantern.</p>
+									<p>A Tabula game on revolving scenic lantern</p>
 									<ul class="actions">
 									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -243,7 +243,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Komorebi</h3>
-									<p>An online game about rescuing wild migratory birds.</p>
+									<p>An online game about rescuing wild migratory birds</p>
 									<ul class="actions">
 <!-- 										<li><a href="generic.html" class="button">Learn more</a></li>
  -->									</ul>
@@ -256,7 +256,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Indigo</h3>
-									<p>A micro documentary film about plant dyeing.</p>
+									<p>A micro documentary film about plant dyeing</p>
 									<ul class="actions">
 								<!-- 		<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
