--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<!-- <p></p> -->
 						</div>
 						<section><!--unfold and go-->
-							<a href="#" class="image"><img src="images/unfold/Figure1.png" alt="" data-position="center center" /></a>
+							<a href="https://dl.acm.org/doi/10.1145/3544549.3585819" class="image"><img src="images/unfold/Figure1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>CHI 2023 LBW</h3>
@@ -80,7 +80,7 @@
 						</section>
 
 						<section><!--landscape-->
-							<a href="#" class="image"><img src="images/landscape/mainpage.png" alt="" data-position="center center" /></a>
+							<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="image"><img src="images/landscape/mainpage.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>CAVW 2022</h3>
@@ -98,7 +98,7 @@
 
 
 						<section><!--wesee-->
-							<a href="#" class="image"><img src="images/wesee/wesee-2.png" alt="" data-position="center center" /></a>
+							<a href="pdf/Hong_Haoran_91.pdf" class="image"><img src="images/wesee/wesee-2.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Interact 2023</h3>
@@ -115,7 +115,7 @@
 
 
 						<section><!--landscape-->
-							<a href="#" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
+							<a href="pdf/Hong_Haoran_91.pdf" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>AHFE 2023</h3>
@@ -133,7 +133,7 @@
 						
 
 						<section>
-							<a href="#" class="image"><img src="images/AIAD/mainpage.png" alt="" data-position="25% 25%" /></a>
+							<a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14" class="image"><img src="images/AIAD/mainpage.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>CGI 2020</h3>
