--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<h3>A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h3>
 									
 									<p><b>Weiyue Lin</b>, Ting Li, Liu Liu, and Qian Zhu.<p>
-									<p><a href="https://dl.acm.org/doi/10.1145/3544549.3585819">View PDF</a><p>
+									<p><a href="https://dl.acm.org/doi/10.1145/3544549.3585819">DOI</a>&emsp;<a href="pdf/unfold.pdf">PDF</a><p>
 									<!--wesee<p>?</p>
 									<ul class="actions">
 									<li><a href="https://dl.acm.org/doi/10.1145/3544549.3585819" class="button">View PDF</a></li>-->
@@ -88,7 +88,7 @@
 									<h3>Landscape Rippling: Context-based Water-mediated Interaction</h3>
 									
 									<p><b>Weiyue Lin</b>, Haoran Hong, Yingying She, Baorong Yang. </p>
-									<p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064">View PDF</a><p>
+									<p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064">DOI</a>&emsp;<a href="pdf/landscape.pdf">PDF</a><p>
 									<ul class="actions">
 										<!--<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="button">View PDF</a></li>-->
 									</ul>
@@ -105,7 +105,7 @@
 									<br>
 									<h3>Wesee: Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
 									<p>Yalan Luo, <b>Weiyue Lin</b>, </p>
-									<p><a href="pdf/Hong_Haoran_91.pdf">View PDF</a><p>
+									<p><a href="pdf/Hong_Haoran_91.pdf">DOI</a>&emsp;<a href="pdf/Hong_Haoran_91.pdf">PDF</a><p>
 									<ul class="actions">
 										<!-- <li><a href="wesee.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -122,7 +122,7 @@
 									<br>
 									<h3>Evergreen: A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
 									<p>Haoran Hong, <b>Weiyue Lin</b>, Genshen Li, Hiroki Kobayashi, Yingying She, Yiran Chen, Pintong Xiao, Yinan Fu, Jiayi Lei</p>
-									<p><a href="pdf/Hong_Haoran_91.pdf">View PDF</a><p>
+									<p><a href="pdf/Hong_Haoran_91.pdf">DOI</a>&emsp;<a href="pdf/Hong_Haoran_91.pdf">PDF</a><p>
 									<ul class="actions">
 										<!--<li><a href="Landscape2.html" class="button">PDF</a></li>-->
 									</ul>
@@ -140,7 +140,7 @@
 									<br>
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
 									<p>Jiefeng Li, Yingying She, Lin Lin, Yalan Luo, Hao He, <b>Weiyue Lin</b>, Shengjing Hou. </p>
-									<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14">View PDF</a><p>
+									<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14">DOI</a>&emsp;<a href="pdf/AIAD.pdf">PDF</a><p>
 									<!--<ul class="actions">
 										<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14" class="button">View PDF</a></li>-->
 									</ul>
@@ -214,7 +214,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/chivalrous/1.jpg" alt="" data-position="25% 25%" /></a>
+							<a class="image"><img src="images/chivalrous/1.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Trapped Chivalrous</h3>
