--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									<h3>Interact 2023</h3>
 									<br>
 									<h3>Wesee: Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
-									<p>Yalan Luo, <b>Weiyue Lin</b>, </p>
+									<p>Yalan Luo, <b>Weiyue Lin</b>, Yuhan Liu, Xiaomei Nie, Xiang Qian, Hanyu Guo.</p>
 									<p><a href="pdf/Hong_Haoran_91.pdf">DOI</a>&emsp;<a href="pdf/Hong_Haoran_91.pdf">PDF</a><p>
 									<ul class="actions">
 										<!-- <li><a href="wesee.html" class="button">Learn more</a></li> -->
@@ -176,7 +176,7 @@
 						</div>
 						
 						<section>
-							<a href="#" class="image"><img src="images/Snuggle/1.jpg" alt="" data-position="center center" /></a>
+							<a  class="image"><img src="images/Snuggle/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Embrace</h3>
@@ -189,7 +189,7 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a  class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Landscape Rippling</h3>
@@ -202,7 +202,7 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/evergreen/1.jpg" alt="" data-position="center center" /></a>
+							<a class="image"><img src="images/evergreen/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Evergreen</h3>
