--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<h1>Hi, I'm Weiyue.</h1>
 							<div class="welcome-words">
-							<p>I'm a second-year graduate student at Peking University. Prior to this, I completed my Bachelor’s in Xiamen University. I am preparing for my PHD application and my research interests include <b>Human-Computer Interaction<b>, <b>Accessibility<b>, and <b>Mixed Reality<b>. I am keen on studying how to improve the form of interaction between humans and technology, so as to achieve a more <b>natural, efficient, and inclusive<b> human-computer interaction.<br />
+							<p>I'm a second-year graduate student at Peking University. Prior to this, I completed my Bachelor’s in Xiamen University. I am preparing for my PHD application and my research interests include <b>Human-Computer Interaction</b>, <b>Accessibility</b>, and <b>Mixed Reality</b>. I am keen on studying how to improve the form of interaction between humans and technology, so as to achieve a more <b>natural, efficient, and inclusive</b> human-computer interaction.<br />
 							<!--  <a href="http://html5up.net/license">Creative Commons</a>.-->
 							</p>
 							</div>
