--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<h3>Wesee: Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
 									<p>Yalan Luo, <b>Weiyue Lin</b>, Yuhan Liu, Xiaomei Nie, Xiang Qian, Hanyu Guo.</p>
 									<h3>INTERACT 2023</h3>
-									<p><a href="pdf/Hong_Haoran_91.pdf">DOI</a>&emsp;<a href="pdf/Hong_Haoran_91.pdf">PDF</a><p>
+									<p><a href="pdf/Wesee.pdf">DOI</a>&emsp;<a href="pdf/Hong_Haoran_91.pdf">PDF</a><p>
 									<ul class="actions">
 										<!-- <li><a href="wesee.html" class="button">Learn more</a></li> -->
 									</ul>
