--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Embrace</h3>
-									<p>Natural Healing Interactive space at Suzhou High School</p>
+									<p>Natural Healing Interactive space at Suzhou High School <b>@SEEEKLAB</b></p>
 									<ul class="actions">
 									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
