--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<li><a href="#one">Publications</a></li>
 							<li><a href="#two">Works</a></li>
 							<li><a href="#three">Contact</a></li>
-							<li><a href=" ">CV</a></li>
+							<li><a href="pdf/weiyue_lin_pku.pdf">CV</a></li>
 						</ul>
 					</nav>
 				</div>
