--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Portfolio/Resume Theme for Developers</title>
+    <title>Weiyue Lin|HCI</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <meta name="description" content="Boootstrap Portfolio/Resume Theme for Developers">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
     <link rel="shortcut icon" href="favicon.ico">  
-    
+    <link rel="icon" href="images/moon.png" type ="images/moon.png">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     
@@ -38,7 +38,7 @@
 			    <div class="col">         
 		            <img class="profile-image img-fluid float-start rounded-circle" src="assets/images/profile.png" alt="profile image" />
 		            <div class="profile-content">
-		                <h1 class="name">James Lee</h1>
+		                <h1 class="name">Weiyue Lin</h1>
 		                <h2 class="desc">Web App Developer</h2>   
 		                <ul class="social list-inline">
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
