--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 							<label class="custom-control-label" for="darkSwitch">Dark Mode</label>
 						</div>
 			        </div><!--//dark-mode-switch-->
-	                <a class="btn btn-cta-primary" href="#" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>        
+	                <!-- <a class="btn btn-cta-primary" href="#" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>   -->      
+	                <a class="btn btn-cta-primary btn-download" href="#" target="_blank"><i class="fas fa-download"></i> Download My CV</a>
 	            </div><!--//col-->
 	        </div><!--//row-->         
         </div><!--//container-->
@@ -390,12 +391,12 @@
     </div><!--//masonry-->
     
     <!-- ******FOOTER****** --> 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container text-center">
                 <small class="copyright">Designed with <span class="sr-only">love</span><i class="fas fa-heart"></i> by <a target="_blank" href="http://www.mobanwang.com" title="网页模板">网页模板</a> for developers</small>
         </div><!--//container-->
     </footer><!--//footer-->
- 
+  -->
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/popper.min.js"></script> 
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
