--- a/index.html
+++ b/index.html
@@ -340,13 +340,25 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
                 
+				<aside class="list conferences aside section">
+                    <div class="section-inner shadow-sm rounded">
+                        <h2 class="heading">Hobbies</h2>
+                        <div class="content">
+                            <ul class="list-unstyled">
+                                <li><i class="far fa-book"></i> Reading (Recently read "When Breath Becomes Air")</li>
+                                <li><i class="far fa-person-running"></i> Jog </li>
+                            </ul>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </aside><!--//section-->
+
                 <aside class="list conferences aside section">
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Recent Learning</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="far fa-calendar-alt"></i> Guitar (Can currently play two complete songs!)</li>
-                                <li><i class="far fa-calendar-alt"></i> Gardening (Waiting for the cherry tomatoes to bear fruit...)</li>
+                                <li><i class="far fa-music"></i> Guitar (Can currently play two complete songs!)</li>
+                                <li><i class="far fa-leaf"></i> Gardening (Waiting for the cherry tomatoes to bear fruit...)</li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
