--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 
                 <aside class="list music aside section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">Selected Broadcast</h2>
+                        <h2 class="heading">Selected broadcast</h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-headphones"></i> <a href="https://music.163.com/#/program?app_version=8.10.05&id=2063741477&sc=wm&dlt=0846">卡尔维诺的童话世界</a></li>
@@ -340,13 +340,14 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
                 
-				<aside class="list conferences aside section">
+				<aside class="list music aside section">
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Hobbies</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="far fa-book"></i> Reading (Recently read "When Breath Becomes Air")</li>
-                                <li><i class="far fa-person-running"></i> Jog </li>
+                                <li><i class="fas fa-book"></i> Reading (Recently read "When Breath Becomes Air")</li>
+                                <li><i class="fas fa-person-running"></i> Jog </li>
+                                <li><i class="fas fa-cookie"></i> Simple cooking </li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -354,11 +355,11 @@
 
                 <aside class="list conferences aside section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">Recent Learning</h2>
+                        <h2 class="heading">Recent learning</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="far fa-music"></i> Guitar (Can currently play two complete songs!)</li>
-                                <li><i class="far fa-leaf"></i> Gardening (Waiting for the cherry tomatoes to bear fruit...)</li>
+                                <li><i class="fas fa-music"></i> Guitar (Can play two complete songs!)</li>
+                                <li><i class="fas fa-leaf"></i> Gardening (Waiting for the cherry tomatoes to bear fruit...)</li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
