--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
                         <h2 class="heading">Hobbies</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-book"></i> Reading (Recently read "When Breath Becomes Air")</li>
-                                <li><i class="fas fa-person-running"></i> Jog </li>
-                                <li><i class="fas fa-cookie"></i> Simple cooking </li>
+                                <li><i class="fas fa-book"></i> Reading</li>
+                                <li><i class="fas fa-person-running"></i> Jogging </li>
+                                <li><i class="fas fa-cookie"></i> Very simple cooking </li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
