--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						</div>
 			        </div><!--//dark-mode-switch-->
 	                <!-- <a class="btn btn-cta-primary" href="#" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>   -->      
-	                <a class="btn btn-cta-primary btn-download" href="#" target="_blank"><i class="fas fa-download"></i> Download My CV</a>
+	                <a class="btn btn-cta-primary btn-download" href="pdf/weiyue_lin_peking.pdf" target="_blank"><i class="fas fa-download"></i> Download My CV</a>
 	            </div><!--//col-->
 	        </div><!--//row-->         
         </div><!--//container-->
@@ -70,7 +70,7 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hi! Welcome to my website! I'm a 2-year postgraduate student at Peking University. Prior to this, I completed my Bachelor’s degree at Xiamen University. I am preparing for my PHD application and my research interests include <b>Human-Computer Interaction</b>, <b>Accessibility</b>, and <b>Mixed Reality</b>. I am keen on studying how to improve the form of interaction between humans and technology, so as to achieve a more <b>natural, efficient, and inclusive</b> human-computer interaction.</p>
+                            <p>Hi! Welcome to my website! I'm a 2-year postgraduate student at Peking University. Prior to this, I completed my Bachelor’s degree at Xiamen University. I am preparing for my PHD application and my research interests include <b>Human-Computer Interaction</b>, <b>Accessibility</b>, and <b>Mixed Reality</b>. I am keen on studying how to improve the form of interaction between humans and technology, so as to achieve a more <b>natural, efficient, and inclusive</b> human-computer interaction. Please feel free to contact me if you share common research interests.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
