--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/work1.jpg" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="# " target="_blank">Embrace: Natural Healing Interactive space at Suzhou High School <b>@SEEEKLAB</b></a></h3>
+                                    <h3 class="title"><a href="# " target="_blank"></a></h3>
                                     <p class="mb-2"> </p>
-                                    <h4 class="title"> </h4>
+                                    <h4 class="title">Embrace: Natural Healing Interactive space at Suzhou High School <b>@SEEEKLAB</b></h4>
                                     
                                 </div><!--//desc-->                          
                             </div><!--//item-->
