--- a/index.html
+++ b/index.html
@@ -159,6 +159,29 @@
                                     
                                 </div><!--//desc-->                          
                             </div><!--//item-->
+
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="# " target="_blank">
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/work2.jpg" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="# " target="_blank"></a></h3>
+                                    <p class="mb-2"> </p>
+                                    <h4 class="title">Landscape Rippling: A water-mediated interaction system that allows you to interact with ancient paintings</h4>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="# " target="_blank">
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/work3.jpg" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="# " target="_blank"></a></h3>
+                                    <p class="mb-2"> </p>
+                                    <h4 class="title">Evergreen: A somatosensory interactive space which allows you to experience plant dyeing</h4>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+
                         </div>
                     </div><!--//section-inner-->                
                 </section><!--//section-->
