--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		                <h2 class="desc">Peking University</h2>   
 		                <ul class="social list-inline">
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-		                    <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+		                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/weiyue-lin-84196327b/"><i class="fab fa-linkedin-in"></i></a></li>
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-github-alt"></i></a></li>    
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>   
 		                    <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>                
