--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
 		                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/weiyue-lin-84196327b/"><i class="fab fa-linkedin-in"></i></a></li>
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-github-alt"></i></a></li>    
-		                    <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>   
-		                    <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>                
+		                    <!-- <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>   
+		                    <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>   -->              
 		                </ul> 
 		            </div><!--//profile-->
 			    </div><!--//col-->
@@ -296,7 +296,7 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
 
-                <aside class="list conferences aside section">
+                <!-- <aside class="list conferences aside section">
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Recent learning</h2>
                         <div class="content">
@@ -306,7 +306,7 @@
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
-                </aside><!--//section-->
+                </aside><!--//section--> 
                 
             </div><!--//secondary-->  
        </div>
