--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="# " target="_blank">
-                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/work3.jpg" alt="project name" />
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/work3.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="# " target="_blank"></a></h3>
