--- a/index.html
+++ b/index.html
@@ -296,15 +296,15 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
 
-                <!-- <aside class="list conferences aside section">
+                 <aside class="list conferences aside section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">Recent learning</h2>
+                        <h2 class="heading">Recently learning</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-music"></i> Guitar (Can play two complete songs!)</li>
-                                <li><i class="fas fa-leaf"></i> Gardening (Waiting for the cherry tomatoes to bear fruit...)</li>
+                                <li><i class="fas fa-music"></i> Guitar</li>
+                                <li><i class="fas fa-leaf"></i> Gardening</li>
                             </ul>
-                        </div><!--//content-->
+                        </div><!--//content
                     </div><!--//section-inner-->
                 </aside><!--//section--> 
                 
