--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hi! Welcome to my website! I'm a 2-year postgraduate student at Peking University. Prior to this, I completed my Bachelor’s degree at Xiamen University. I am preparing for my PHD application and my research interests include <b>Human-Computer Interaction</b>, <b>Accessibility</b>, and <b>Mixed Reality</b>. I am keen on studying how to improve the form of interaction between humans and technology, so as to achieve a more <b>natural, efficient, and inclusive</b> human-computer interaction. Please feel free to contact me if you share common research interests.</p>
+                            <p>Hi! Welcome to my website! I'm a 2nd-year postgraduate student at Peking University. Prior to this, I completed my Bachelor’s degree at Xiamen University. I am preparing for my PHD application and my research interests include <b>Human-Computer Interaction</b>, <b>Accessibility</b>, and <b>Mixed Reality</b>. I am keen on studying how to improve the form of interaction between humans and technology, so as to achieve a more <b>natural, efficient, and inclusive</b> human-computer interaction. Please feel free to contact me if you share common research interests.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -143,7 +143,7 @@
                         </div><!--//content-->  
                     </div><!--//section-inner-->                
                 </section><!--//section-->
-                <section class="latest section">
+                <!-- <section class="latest section">
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Selected Projects</h2>
                         <div class="content">    
@@ -157,8 +157,8 @@
                                     <p class="mb-2"> </p>
                                     <h4 class="title">Embrace: Natural Healing Interactive space at Suzhou High School <b>@SEEEKLAB</b></h4>
                                     
-                                </div><!--//desc-->                          
-                            </div><!--//item-->
+                                </div>                          
+                            </div>
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="# " target="_blank">
@@ -168,8 +168,8 @@
                                     <h3 class="title"><a href="# " target="_blank"></a></h3>
                                     <p class="mb-2"> </p>
                                     <h4 class="title">Landscape Rippling: A water-mediated interaction system that allows you to interact with ancient paintings</h4>
-                                </div><!--//desc-->                          
-                            </div><!--//item-->
+                                </div>                         
+                            </div>
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="# " target="_blank">
@@ -179,12 +179,12 @@
                                     <h3 class="title"><a href="# " target="_blank"></a></h3>
                                     <p class="mb-2"> </p>
                                     <h4 class="title">Evergreen: A somatosensory interactive space which allows you to experience plant dyeing</h4>
-                                </div><!--//desc-->                          
-                            </div><!--//item-->
+                                </div>                         
+                            </div>
 
                         </div>
-                    </div><!--//section-inner-->                
-                </section><!--//section-->
+                    </div>               
+                </section> --><!--//section-->
             </div>
             <div class="secondary col-lg-4 col-12"><!--侧边栏-->
                  <aside class="info aside section">
